# DTAP-MPPI

./: .~lock.simulationResults.ods#  MPPI Simulation Trials.txt  README.md  dynProbMPPI_test.py  dynamicMPPI_test.py  main.py  numba_test.py  pyproject.toml  simulationResults.ods  staticMPPI_test.py  test_get_obstacle_data.py  test_polygon_flattening.py
controllers/: cuda_kernels.py  mpc_baseline.py  mppi_baseline.py  mppi_dynObs.py  mppi_terraneous.py  waypointSelector.py
dtap_mppi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dynamics/: cuda_dynamics.py  models.py  native_dynamics.py
environments/: dynamicEnv.py  dynamicEnv_deterministic.py  dynamicEnv_probabilistic.py  staticEnv.py  terraneousEnv.py
src/: dynDetMPPI_test.py  dynMPPI_test.py  dynProbMPPI_test.py  staticMPPI_test.py  terraneousMPPI_test.py
terrain_estimators/: DEM_builder.py  camera.py  estimator_kernels.py  traversability_BCM.py
